--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "ytdl-core": "^4.11.0"
   },
